# baseband-log-analyzer

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
bbla/: config.py  main.py  moshell.py  parsers.py  report.py  sftp_upload.py  utils.py
configs/: alarm_filter.example.json  secrets.example.json  sftp.example.json
tests/: test_parsers_lga.py  test_parsers_llog.py  test_report.py
